slabai-chart/templates/crash-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: crash-pod
  namespace: slabai
spec:
  containers:
    - name: fail
      image: busybox
      command: ["false"]
