slabai-chart/templates/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-monitor
  namespace: slabai
  labels:
    app: health-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-monitor
  template:
    metadata:
      labels:
        app: health-monitor
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2112"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: health-monitor-sa
      containers:
      - name: monitor
        image: amolkhetan/k8s-health-monitor:latest
        ports:
        - containerPort: 2112
---
apiVersion: v1
kind: Service
metadata:
  name: health-monitor
  namespace: slabai
  labels:
    app: health-monitor
spec:
  type: NodePort
  selector:
    app: health-monitor 
  ports:
  - name: metrics
    protocol: TCP
    port: 2112
    targetPort: 2112
    nodePort: 32112
